마이크로서비스 spring cloud config client 구성 및 config import

--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
   port: 8080
+
+spring:
+  application:
+    name: user-service
+  cloud:
+    config:
+      fail-fast: true
+
+  config:
+    import: optional:configserver:http://127.0.0.1:8888
