--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -1,2 +1,12 @@
 server:
   port: 8080
+
+spring:
+  application:
+    name: order-service
+  cloud:
+    config:
+      fail-fast: true
+
+  config:
+    import: optional:configserver:http://127.0.0.1:8888
