--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,22 +12,46 @@ services:
     volumes:
       - ./init:/docker-entrypoint-initdb.d
 
+  q-pang-config-server:
+    build: ./config-server
+    ports:
+      - 8888:8888
+    restart: on-failure
+    depends_on:
+      - q-pang-db
+
   q-pang-user-service:
     build: ./user-service
     ports:
       - 8081:8080
+    restart: on-failure
+    depends_on:
+      - q-pang-db
+      - q-pang-config-server
 
   q-pang-product-service:
     build: ./product-service
     ports:
       - 8082:8080
+    restart: on-failure
+    depends_on:
+      - q-pang-db
+      - q-pang-config-server
 
   q-pang-order-service:
     build: ./order-service
     ports:
       - 8083:8080
+    restart: on-failure
+    depends_on:
+      - q-pang-db
+      - q-pang-config-server
 
   q-pang-delivery-service:
     build: ./delivery-service
     ports:
       - 8084:8080
+    restart: on-failure
+    depends_on:
+      - q-pang-db
+      - q-pang-config-server
