docker container간 연결을 위한 environment 추가

--- a/config-server/src/main/resources/config/user-service.yml
+++ b/config-server/src/main/resources/config/user-service.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/user?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: ${USER_DB_CONNECTION_URI:jdbc:mysql://localhost:3306/user?serverTimezone=Asia/Seoul&characterEncoding=UTF-8}
     username: root
     password: password
