--- a/config-server/src/main/resources/config/product-service.yml
+++ b/config-server/src/main/resources/config/product-service.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/product?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    url: ${PRODUCT_DB_CONNECTION_URI:jdbc:mysql://localhost:3306/product?serverTimezone=Asia/Seoul&characterEncoding=UTF-8}
     username: root
     password: password
