--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -14,4 +14,4 @@ spring:
       fail-fast: true
 
   config:
-    import: optional:configserver:http://127.0.0.1:8888
+    import: optional:configserver:${CONFIG_SERVER_URI:http://localhost:8888}
