--- a/config-server/src/main/resources/config/delivery-service.yml
+++ b/config-server/src/main/resources/config/delivery-service.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
     url: ${DELIVERY_DB_CONNECTION_URI:jdbc:mysql://localhost:3306/delivery?serverTimezone=Asia/Seoul&characterEncoding=UTF-8}
-    username: root
-    password: password
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:password}
