--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -15,3 +15,16 @@ spring:
 
   config:
     import: optional:configserver:${CONFIG_SERVER_URI:http://localhost:8888}
+
+eureka:
+  client:
+    service-url:
+      default-zone: ${DISCOVERY_SERVER_URI:http://localhost:8761/eureka/}
+
+management:
+  endpoints:
+    jmx:
+      exposure:
+        include:
+          - health
+          - info
