set config, gateway server application name

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     active:
       - native
   application:
-    name: config
+    name: config-server
   cloud:
     config:
       server:
