--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -12,14 +12,13 @@ spring:
         max-interval: 2000
         multiplier: 1.1
       fail-fast: true
-
   config:
     import: optional:configserver:${CONFIG_SERVER_URI:http://localhost:8888}
 
 eureka:
   client:
-    service-url:
-      default-zone: ${DISCOVERY_SERVER_URI:http://localhost:8761/eureka/}
+    serviceUrl:
+      defaultZone: ${DISCOVERY_SERVER_URI:http://localhost:8761/eureka/}
 
 management:
   endpoints:
