--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -1,25 +1,16 @@
 spring:
   application:
     name: gateway-server
+  config:
+    import: optional:configserver:${CONFIG_SERVER_URI:http://localhost:8888}
   cloud:
-    gateway:
-      routes:
-        - id: user-service
-          uri: lb://user-service
-          predicates:
-            - Path=/user/**
-        - id: product-service
-          uri: lb://product-service
-          predicates:
-            - Path=/product/**
-        - id: order-service
-          uri: lb://order-service
-          predicates:
-            - Path=/order/**
-        - id: delivery-service
-          uri: lb://delivery-service
-          predicates:
-            - Path=/delivery/**
+    config:
+      retry:
+        initial-interval: 1000
+        max-attempts: 6
+        max-interval: 2000
+        multiplier: 1.1
+      fail-fast: true
 
 eureka:
   client:
