마이크로서비스, 게이트웨이의 actuator 설정 config 서버로 분리

--- a/config-server/src/main/resources/config/gateway-server.yml
+++ b/config-server/src/main/resources/config/gateway-server.yml
@@ -21,3 +21,11 @@ spring:
           uri: lb://delivery-service
           predicates:
             - Path=/delivery/**
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - health
+          - info
