마이크로서비스, 게이트웨이 서버 eureka 설정을 config 서버에서 관리하도록 수정

--- a/config-server/src/main/resources/config/delivery-service.yml
+++ b/config-server/src/main/resources/config/delivery-service.yml
@@ -4,6 +4,11 @@ spring:
     username: ${DB_USERNAME:root}
     password: ${DB_PASSWORD:password}
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${DISCOVERY_SERVER_URI:http://localhost:8761/eureka/}
+
 management:
   endpoints:
     web:
