--- a/config-server/src/main/resources/config/gateway-server.yml
+++ b/config-server/src/main/resources/config/gateway-server.yml
@@ -22,6 +22,11 @@ spring:
           predicates:
             - Path=/delivery/**
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${DISCOVERY_SERVER_URI:http://localhost:8761/eureka/}
+
 management:
   endpoints:
     web:
