gateway-server metrics 수집 및 actuator metrics 설정

--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -14,3 +14,6 @@ spring:
         max-interval: 2000
         multiplier: 1.1
       fail-fast: true
+    gateway:
+      metrics:
+        enabled: true
