actuator endpoint 설정 정보 각 서비스로 이동

--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -17,3 +17,12 @@ spring:
     gateway:
       metrics:
         enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - health
+          - info
+          - refresh
