--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
         max-interval: 2000
         multiplier: 1.1
       fail-fast: true
+  jpa:
+    open-in-view: false
 
 management:
   endpoints:
