jjwt dependency 추가 및 JwtProvider 구현, config 서버에 jwt 환경변수 추가

--- a/config-server/src/main/resources/config/user-service.yml
+++ b/config-server/src/main/resources/config/user-service.yml
@@ -8,3 +8,6 @@ eureka:
   client:
     serviceUrl:
       defaultZone: ${DISCOVERY_SERVER_URI:http://localhost:8761/eureka/}
+
+jwt:
+  validity-in-milliseconds: ${VALIDITY_IN_MILLISECONDS:216000000}
