--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,8 @@ services:
       CONFIG_SERVER_URI: "http://q-pang-config-server:8888"
       DISCOVERY_SERVER_URI: "http://q-pang-discovery-server:8761/eureka/"
       USER_DB_CONNECTION_URI: "jdbc:mysql://q-pang-db:3306/user?serverTimezone=Asia/Seoul&characterEncoding=UTF-8"
+      JWT_SECRET: "dongkyun-jwt-secret"
+      VALIDITY_IN_MILLISECONDS: 216000000
     depends_on:
       - q-pang-db
       - q-pang-config-server
