gateway server cors 설정

--- a/gateway-server/src/main/resources/application.yml
+++ b/gateway-server/src/main/resources/application.yml
@@ -37,6 +37,17 @@ spring:
           uri: lb://delivery-service
           predicates:
             - Path=/delivery/**
+      globalcors:
+        cors-configurations:
+          '[/**]':
+            allowedOrigins:
+              - "http://localhost:3000"
+            allowedMethods:
+              - GET
+              - POST
+              - PATCH
+              - PUT
+              - DELETE
 
 management:
   endpoints:
