gateway-server jwt_secret env 값 추가 및 secret 변수 immutable 타입으로 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     environment:
       CONFIG_SERVER_URI: "http://q-pang-config-server:8888"
       DISCOVERY_SERVER_URI: "http://q-pang-discovery-server:8761/eureka/"
+      JWT_SECRET: "dongkyun-jwt-secret"
     depends_on:
       - q-pang-db
       - q-pang-config-server
