--- a/user-service/src/test/resources/application.yml
+++ b/user-service/src/test/resources/application.yml
@@ -20,3 +20,7 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+
+jwt:
+  secret: test-jwt-secret
+  validity-in-milliseconds: 36000000
