ProductService: 상품 카테고리 샘플 데이터 추가를 위한 data.sql 작성

--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+    defer-datasource-initialization: true
+  sql:
+    init:
+      mode: always
+
 
 management:
   endpoints:
