--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,6 @@ services:
     environment:
       KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_CREATE_TOPICS: "exam-topic:1:1"
       KAFKA_CFG_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
     volumes:
@@ -81,6 +80,7 @@ services:
       - q-pang-config-server
       - q-pang-discovery-server
       - q-pang-gateway-server
+      - kafka
 
   q-pang-product-service:
     build: ./product-service
@@ -96,6 +96,7 @@ services:
       - q-pang-config-server
       - q-pang-discovery-server
       - q-pang-gateway-server
+      - kafka
 
   q-pang-order-service:
     build: ./order-service
@@ -111,6 +112,7 @@ services:
       - q-pang-config-server
       - q-pang-discovery-server
       - q-pang-gateway-server
+      - kafka
 
   q-pang-delivery-service:
     build: ./delivery-service
@@ -126,3 +128,4 @@ services:
       - q-pang-config-server
       - q-pang-discovery-server
       - q-pang-gateway-server
+      - kafka
