docker-compose.yml zookeeper arm64용 image로 변경

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./init:/docker-entrypoint-initdb.d
 
   zookeeper:
-    image: wurstmeister/zookeeper
+    image: arm64v8/zookeeper
     ports:
       - "2181:2181"
 
