OrderService, ProductService: kafka produce, consume 테스트 클래스 작성

--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -22,6 +22,12 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+  kafka:
+    producer:
+      bootstrap-servers:
+        - kafka:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 management:
   endpoints:
