--- a/product-service/src/main/resources/application.yml
+++ b/product-service/src/main/resources/application.yml
@@ -26,7 +26,14 @@ spring:
   sql:
     init:
       mode: always
-
+  kafka:
+    consumer:
+      bootstrap-servers:
+        - kafka:9092
+      group-id: my_group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
 management:
   endpoints:
