--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CFG_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_CREATE_TOPICS: "q-pang:1:1"
+      KAFKA_CREATE_TOPICS: "order:1:1"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     depends_on:
