DeliveryService: 주문 이벤트를 consume하여 배송 등록 Applicaton Service를 command하는 adapter 구현

--- a/delivery-service/src/main/resources/application.yml
+++ b/delivery-service/src/main/resources/application.yml
@@ -22,6 +22,14 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
+  kafka:
+    consumer:
+      bootstrap-servers:
+        - kafka:9092
+      group-id: my_group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 
 management:
   endpoints:
