--- a/delivery-service/src/main/resources/application.yml
+++ b/delivery-service/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
     consumer:
       bootstrap-servers:
         - kafka:9092
-      group-id: my_group
+      group-id: delivery_group
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
